# Zero-Omission-Harness

./: .gitignore  CONFIG.YAML  ONBOARDING.md  README.md  README_vi.md  pyproject.toml  requirements.txt
.agent/: 01_STRUCTURE.md  04_PINVOKE_CONTRACT.md  DECISION_LOG.md
.agent/consistency/: checkpoint_manager.py  lock_manager.py  validator.py
.agent/consistency/validators/: base.py  code_contract.py  doc_reality.py  map_code.py  state_transition.py
.agent/hooks/: pre-commit
.bug/: 04_MEMORY_TRACE.md
.router/: 00_INTERVIEW.md  01_CODE.md  03_DOC.md
.sim/: 00_SIM_RULES.md  cascade_map.md
.state/: STATE_MACHINE.yaml  state_validator.py
.test/memory/: 00_MEMORY_TRACE_RULES.md
.test/scenarios/: bug_template.md
.token/: TOKEN_TRACKING.md  budget.yaml
.token/bugfix/: BUGFIX_LOG.yaml
.token/coding/: CODING_LOG.yaml
.token/interview/: INTERVIEW_LOG.yaml
.workflow/: 02_GENERATE_AGENT.md  04_BUGFIX_LOOP.md  06_CONSISTENCY_CHECKER.md  07_CONTEXT_LOADER.md
.workflow/interview/: 03_constraints.md  06_exceptions.md
zoh/: __init__.py  __main__.py  cli.py  mcp_server.py  validator.py
zoh/analyzers/: static_analyzer.py
zoh/commands/: dashboard.py  init.py  metrics.py  sim.py
zoh/core/: __init__.py  ai_provider.py  checkpoint.py  config.py  impact.py  lock.py  state.py  state_lock.py  token.py
zoh/dashboard/: app.py
zoh/templates/default/.agent/: 00_MASTER.md  02_TASK_LIST.md  03_IPC_CONTRACT.md  05_RULES_REACT.md  06_BUILD_CONFIG.md  07_COMMON_MISTAKES.md  AI_GUIDE.md  STATE.md
zoh/templates/default/.bug/: 00_RULES.md  01_SCAN_LOG.md  02_BUG_LIST.md  05_PENDING.md
zoh/templates/default/.doc/: CHANGELOG.md
zoh/templates/default/.gates/: validation_rules.yaml
zoh/templates/default/.map/: STRUCTURE.md
zoh/templates/default/.router/: 02_BUGFIX.md  05_ARCH.md
zoh/templates/default/.skill/: react.md
zoh/templates/default/.test/: 00_TEST_RULES.md
zoh/templates/default/.workflow/: 00_MASTER_WORKFLOW.md
zoh/templates/dotnet/: CONFIG.YAML
zoh/templates/dotnet/.agent/: 05_RULES_CSHARP.md
zoh/templates/dotnet/.bug/: 03_FIX_DETAILS.md
zoh/templates/dotnet/.doc/: API_SPEC.md  ARCH_FLOW.md
zoh/templates/react/: CONFIG.YAML  GUIDE.md
zoh/templates/react/.bug/: README.md
zoh/tests/: test_ai_compliance.py  test_init_logic.py  test_phase4.py  test_state_lock.py  test_static_analyzer.py  test_validators.py
zoh/validators/: __init__.py  ai_compliance.py  ast_parser.py  base.py  code_contract.py  doc_reality.py  map_code.py  state_transition.py  ts_parser.js
(+46 files in other folders)
